<resources>
    <string name="app_name">Two Mountains Stop-Smoking</string>
    <string name="language_selection">Choose Your Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="start_setup">start setup</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="account">account:：</string>
    <string name="phone_number">phone number</string>
    <string name="password">password：</string>
    <string name="or">OR</string>
    <string name="Use_Social_Media">Use Social Media</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Forgot_Your_Password">Forgot Your Password?</string>
    <string name="dont_remember">Don\'t remember your Password? Please enter your account and email to get a new password.</string>
    <string name="email">email：</string>
    <string name="new_password">new password：</string>
    <string name="Change_password">Change password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Login_to_your_account">Login to your account</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="Sign_up">Sign up</string>
    <string name="Administrator_entrance">Administrator entrance</string>
    <string name="User_Management">User Management</string>
    <string name="Administrator">Administrator</string>
    <string name="Search">Search</string>
    <string name="Device">Device</string>
    <string name="Adress">Address</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Set_the_data_to_be_sent">Set the data to be sent (in hexadecimal string format)</string>
    <string name="Enter_the_data">Enter the data to be sent here</string>
    <string name="Send">Send</string>
    <string name="The_result_of_sending_data_operation_is_displayed_here">The result of sending data operation is displayed here</string>
    <string name="Display_the_received_data_operation_results">Display the received data operation results (successful/failed sending)</string>
    <string name="The_result_of_receiving_data_operation_is_displayed_here">The result of receiving data operation is displayed here</string>
    <string name="Not_Connected">Not Connected</string>
    <string name="Turn_On_Bluetooth">Turn On Bluetooth?</string>
    <string name="To_Connect_to_and_Setup_your_Xpedition1">To Connect to and Setup your X-pedition1</string>
    <string name="Bluetooth_needs_to_be_on.">Bluetooth needs to be on.</string>
    <string name="Cancel">Cancel</string>
    <string name="Turn_on">Turn on</string>
    <string name="Connect_Your_Xpedition1">Connect Your X-pedition1</string>
    <string name="Tap_your_Xpedition1_when_it_appears_in_the_list">Tap your X-pedition 1 when it appears in the list</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Smoke_Free_Days">Smoke-Free Days!</string>
    <string name="Change_Your_Password">Change Your Password</string>
    <string name="Please_enter_your_account_and_old_password_to_get_a_new_password.">Please enter your account and old password to get a new password.</string>
    <string name="old_password">old password：</string>
    <string name="Daily_Readings">Daily Readings</string>
    <string name="Device_Settings">Device Settings</string>
    <string name="Device_Time">Device Time</string>
    <string name="Device_Name">Device Name</string>
    <string name="On_Timer">On Timer (minutes)</string>
    <string name="Off_Timer">Off Timer (minutes)</string>
    <string name="Daily_Uses">Daily Uses</string>
    <string name="Update">Update</string>
    <string name="WEEK">WEEK</string>
    <string name="MONTH">MONTH</string>
    <string name="PRGM">PRGM</string>
    <string name="title">title</string>
    <string name="Please_tell_more_about_yourself">Please tell more about yourself</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="UPDATE_PROFILE">UPDATE PROFILE</string>
    <string name="STOP_SMOKING_PROGRAM">STOP-SMOKING PROGRAM</string>
    <string name="Started_the_Program">Started the Program</string>
    <string name="Start_Date">Start Date</string>
    <string name="Quit_Date">Quit Date</string>
    <string name="Has_to_be_determined">Has to be determined</string>
    <string name="Smoke_Free_Days2">Smoke-Free Days</string>
    <string name="Share_your_Results">Share your Results</string>
    <string name="FAVORITES">FAVORITES</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Any_Question_Please_Write_Us">Any Question? Please Write Us</string>
    <string name="You_can_send_an_email_to">You can send an email to tmpsytech@outlook.com</string>
    <string name="Daily_Questions">Daily Questions</string>
    <string name="How_Movtivated_are_you_to_QUIT_smoking">How Movtivated are you to QUIT smoking?(Percentage, such as 80%)</string>
    <string name="How_many_cigarettes_did_you_smoke_Yesterday">How many cigarettes did you smoke Yesterday?(Integer, such as 10)</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="Todays_Reading">Today\'s Reading</string>
    <string name="My_Profile">My Profile</string>
    <string name="Graph">Graph</string>
    <string name="Setting">Setting</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Listen">Listen</string>
    <string name="Logout">Logout</string>
    <string name="Mine">Mine</string>
    <string name="Motivation">Motivation</string>
    <string name="date">date</string>
    <string name="Amount">Amount</string>
    <string name="Start_Date2">Start Date:</string>
    <string name="Quit_Date2">Quit Date:</string>
    <string name="Smoke_Free_Days3">Smoke-Free Days:</string>
    <string name="Sign_in">Sign in</string>
    <string name="agree">agree</string>
    <string name="help_titles1">Introducing the Two Mountains</string>
    <string name="help_titles2">Two Mountains is an analogy</string>
    <string name="help_titles3">The secret to quitting smoking is to plan and prepare</string>
    <string name="help_titles4">Two Mountains Stop-Smoking Program teaches you to plan and prepare your stop-smoking expedition</string>
    <string name="help_topics1">Introducing the Two Mountains: You have to climb these (but don\'t worry)</string>
    <string name="help_topics2">Two Mountains is an analogy. It is a story, a personal story. It is a narrative, written by each person trying to quit smoking. Some people will have an easier time, they will climb two smaller mountains. Some people will have a very difficult time. They will choose the highest mountains; they will think that quitting smoking is the biggest challenge that they could possibly face or imagine.</string>
    <string name="help_topics3">Quitting smoking can be unimaginably difficult or just mildly uncomfortable. It depends on each person individually and their mindset. If you think that quitting will be difficult, like climbing Mount Everest or the Matterhorn, then it will be exactly that difficult. If you think that it will be like climbing a smaller mountain or hill, like Mount Snowdon in Wales, then it won\'t be any more difficult than that. The secret to quitting smoking is to plan and prepare. Set your goals to climb two smaller mountains and quitting smoking will be no more difficult that these smaller expeditions.</string>
    <string name="help_topics4">The Two Mountains Stop-Smoking Program teaches you to plan and prepare your stop-smoking expedition and then your quit-nicotine expedition. Using psychology and technology, we are breaking your smoking habit into two easier-to-manage challenges. First, we will teach you to break the smoking habit. Second, we will teach you to beat the nicotine dependency. You can learn how to plan and prepare to summit these two mountains successfully.</string>
    <string name="faqs_titles1">I am unable to log in to the application and it shows "Incorrect account or password".</string>
    <string name="faqs_titles2">What should I do if I forget my password?</string>
    <string name="faqs_titles3">How can I change my personal information?</string>
    <string name="faqs_titles4">What should I do if the application crashes during use?</string>
    <string name="faqs_titles5">How to contact the administrator</string>
    <string name="faqs_titles6">My question is not on the above list, what should I do?</string>
    <string name="faqs1">Please ensure that the account and password entered are correct. If you forget your password, please use the "Forget Password" function to reset it.</string>
    <string name="faqs2">Click "Forgot Password" on the login interface, follow the prompts to enter the registration email and phone number, and you can set a new password.</string>
    <string name="faqs3">After logging in, enter the My Home page interface and click "My Profile" to make changes.</string>
    <string name="faqs4">Please try clearing the cache or restarting the application. If the problem persists, contact the administrator to provide feedback.</string>
    <string name="faqs5">You can send an email to tmpsytech@outlook.com We will reply as soon as possible.</string>
    <string name="faqs6">If the required answer is not found, please send an email to contact the administrator and we will provide further assistance.</string>
    <string name="Profile">Profile</string>
    <string name="Device_Connection">Device Connection</string>
    <string name="Help">Help</string>
    <string name="FAQs">FAQ\'s</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Language">Language</string>
    <string name="Home">Home</string>
    <string name="Share">Share</string>
    <string name="Readings">Readings</string>
    <string name="Favorite_Readings">Favorite Readings</string>
    <string name="All_Readings">All Readings</string>
    <string name="Emotion">Emotion</string>
    <string name="Music">Music</string>
    <string name="Science">Science</string>
    <string name="Others">Others</string>
    <string name="Uploader">Uploader：</string>
    <string name="author">author：</string>
    <string name="Terms">Terms</string>
    <string name="UseLicense">Use License</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="Limitations">Limitations</string>
    <string name="Accuracyofmaterials">Accuracy of materials</string>
    <string name="Links">Links</string>
    <string name="Modifications">Modifications</string>
    <string name="GoverningLaw">Governing Law</string>
    <string name="Terms_Content">By accessing our app, Two Mountains, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing Two Mountains. The materials contained in Two Mountains are protected by applicable copyright and trademark law.</string>
    <string name="CALENDAR">Calendar</string>
</resources>