<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_item_user"
        android:title=""
        android:actionLayout="@layout/custom_avatar_layout"
        app:showAsAction="always">
    </item>

    <group android:checkableBehavior="single">

        <!--<item
            android:id="@+id/navigation_item_home"
            android:title="Home"/>

        <item
            android:id="@+id/navigation_item_share"
            android:title="Share"/>-->

        <item
            android:id="@+id/navigation_item_graph"
            android:title="@string/Graph" />

        <item
            android:id="@+id/navigation_item_calendar"
            android:title="@string/CALENDAR" />

        <!--<item
            android:id="@+id/navigation_item_dailyReadings"
            android:title="Daily Readings" />-->

        <item
            android:id="@+id/navigation_item_deviceConnection"
            android:title="@string/Device_Connection" />

        <item
            android:id="@+id/navigation_item_deviceSettings"
            android:title="@string/Device_Settings" />

        <!--<item
            android:id="@+id/navigation_item_myprofile"
            android:title="My Profile" />-->

        <item
            android:id="@+id/navigation_item_changepassword"
            android:title="@string/Change_password" />

        <item
            android:id="@+id/navigation_item_help"
            android:title="@string/Help" />

        <item
            android:id="@+id/navigation_item_faqs"
            android:title="@string/FAQs" />

        <item
            android:id="@+id/navigation_item_contactus"
            android:title="@string/Contact_Us" />

        <item
            android:id="@+id/navigation_item_language"
            android:title="@string/Language" />

        <item
            android:id="@+id/navigation_item_logout"
            android:title="@string/Logout" />
        <!--随意添加菜单选项-->
    </group>
</menu>