<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context="com.example.twoMountains.ui.activity.ForgetPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 工具栏 -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/two_mountains"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:background="@drawable/shape_icbackground"
                android:minWidth="0dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/two_mountains2" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/top_bar_height"
            android:layout_height="@dimen/top_bar_height"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:clickable="true"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_password2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Forgot_Your_Password"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:text="@string/dont_remember"
        android:textSize="10sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/loginContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/shape_background"
        android:transitionName="loginContent">

        <LinearLayout
            android:id="@+id/accountCountent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_edit"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:transitionName="phone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailContent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:transitionName="pwdContent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00000000"
                android:hint="********"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/newPwdContent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_edit"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:transitionName="pwdContent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/newPwdEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00000000"
                android:hint="********"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <!--<TextView
            android:id="@+id/btn_sendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:background="@android:color/transparent"
            android:text="send code"
            android:textColor="@color/blue_table"
            android:textAllCaps="false"
            android:clickable="true"/>-->

    </LinearLayout>

    <Button
        android:id="@+id/btn_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_btn"
        android:layout_gravity="center"
        android:text="@string/Change_password"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15dp" />

</androidx.appcompat.widget.LinearLayoutCompat>